# vdds

./: CMakeLists.txt  README.md  vdds-config-version.cmake.in  vdds-config.cmake.in
include/vdds/: data.hpp  domain.hpp  notifier.hpp  pub-handle.hpp  pub.hpp  query.hpp  strcache.hpp  sub-queue.hpp  sub.hpp  topic.hpp  utils.hpp
include/vdds/detail/: spsc-queue.hpp
misc/: trace.json
src/: CMakeLists.txt  domain.cc  pub-handle.cc  query.cc  strcache.cc  sub-queue.cc  topic.cc  utils.cc
tests/: CMakeLists.txt  domain-test.cc  multi-test.cc  ping-test.cc  query-test.cc  shared-test.cc  shutdown-test.cc  test-skell.hpp  topic-test.cc
